# Si-CLYC

./: 252Cf.mac  CLYC.cc  CMakeLists.txt  H.txt  He.txt  QBBCclyc.cc  QBBCclyc.hh  gpsB.mac  gpsC.mac  gpsFe.mac  gpsH.mac  gpsHe.mac  gpsLi.mac  gpsN.mac  gpsNeutron.mac  gpsO.mac  init_vis.mac  opticalphoton.mac  vis.mac
data0831/: generateCf.py  单粒子筛选.py  单粒子绘图&修正.py  带电粒子占比.py  总粒子筛选.py  粒子鉴别计算.py
data0831/修正前/: Particle.txt  Particle1.txt  粒子绘图.py
data0831/修正后/: Li_n.txt  N_n.txt  O_n.txt  粒子绘图.py
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh  SteppingVerbose.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  SteppingVerbose.cc
